# boss

./: Cargo.toml  Makefile  README-zh.md  README.md
crates/boss-api/: Cargo.toml
crates/boss-api/src/: deployment.rs  lease.rs  lib.rs  meta.rs  node.rs  object.rs  pod.rs  replicaset.rs  resource_version.rs  selector.rs  watch.rs
crates/boss-apiserver/: Cargo.toml
crates/boss-apiserver/src/: app.rs  error.rs  generic.rs  leader.rs  lib.rs  state.rs  watch.rs
crates/boss-apiserver/src/handlers/: deployment.rs  mod.rs  node.rs  pod.rs  replicaset.rs
crates/boss-common/: Cargo.toml
crates/boss-common/src/: error.rs  id.rs  lib.rs  log.rs  time.rs
crates/boss-controller-manager/: Cargo.toml
crates/boss-controller-manager/src/: lib.rs
crates/boss-runtime/: Cargo.toml
crates/boss-runtime/src/: baremetal.rs  container.rs  error.rs  lib.rs  manager.rs  runtime_trait.rs  spec.rs  vm.rs  wasm.rs
crates/boss-scheduler/: Cargo.toml
crates/boss-scheduler/src/: lib.rs
crates/boss-store/: Cargo.toml
crates/boss-store/src/: error.rs  key.rs  lib.rs  memory.rs  raft.rs  storage.rs  watch.rs
crates/bossctl/: Cargo.toml
crates/bossctl/src/: client.rs  commands.rs  main.rs
crates/bosslet/: Cargo.toml
crates/bosslet/src/: bosslet.rs  client.rs  lib.rs
docs/: beyond-kubernetes-roadmap.md  controller-architecture.md  design-philosophy.md  implementation-roadmap.md  index.md  multi-sandbox-design.md  system-architecture.md
examples/: pod-container.yaml  pod-microvm.yaml  pod-process.yaml  pod-wasm.yaml  pod.yaml
