[package]
name = "boss-apiserver"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
boss-common.workspace = true
boss-api.workspace = true
boss-store.workspace = true
async-trait.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
bytes.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
futures.workspace = true
