[package]
name = "boss-common"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
