[package]
name = "boss-runtime"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true

[features]
default = []
wasm = ["dep:wasmtime"]

[dependencies]
boss-common.workspace = true
boss-api.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
thiserror.workspace = true
wasmtime = { version = "27", optional = true }
