[package]
name = "boss-scheduler"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
boss-common.workspace = true
boss-api.workspace = true
boss-store.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
