[package]
name = "bosslet"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
boss-common.workspace = true
boss-api.workspace = true
boss-store.workspace = true
boss-runtime.workspace = true
async-trait.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
reqwest.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
futures.workspace = true
